@@ -8,6 +8,7 @@ import logging
 import time
 import datetime
 from django.contrib.auth.models import User
+from django.core.signing import Signer
 from django.forms.models import modelform_factory
 from django.test import TestCase
 from concurrency.core import RecordModifiedError
@@ -149,7 +150,7 @@ class ConcurrencyTest0(ConcurrencyTestMixin, TestCase):
         original_version = self.TARGET._get_test_revision_number()
         version_field_name = self.TARGET.RevisionMetaInfo.field.name
 
-        form = formClass(self._get_form_data(**{version_field_name: original_version}),
+        form = formClass(self._get_form_data(**{version_field_name: Signer().sign(original_version)}),
                          instance=self.TARGET)
 
         self.assertTrue(form.is_valid(), form.errors)
@@ -158,7 +159,7 @@ class ConcurrencyTest0(ConcurrencyTestMixin, TestCase):
         # self.assertGreater(obj._get_test_revision_number(), original_version)
         self.assertNotEqual(obj._get_test_revision_number(), original_version)
 
-        form = formClass(self._get_form_data(**{version_field_name: obj._get_test_revision_number()}),
+        form = formClass(self._get_form_data(**{version_field_name: Signer().sign(obj._get_test_revision_number())}),
                          instance=obj)
         self.assertTrue(form.is_valid(), form.errors)
         pre_save_version = obj._get_test_revision_number()
