@@ -1,3 +1,4 @@
+from django.core.signing import Signer
 from django.forms.models import modelform_factory, model_to_dict
 from django.forms.widgets import HiddenInput, TextInput
 from django.utils.unittest.case import TestCase
@@ -6,7 +7,6 @@ from concurrency.tests import TestModel0, TestIssue3Model
 
 
 class ConcurrentFormTest(TestCase):
-
     def test_version(self):
         Form = modelform_factory(TestModel0, ConcurrentForm)
         form = Form()
@@ -22,7 +22,14 @@ class ConcurrentFormTest(TestCase):
         obj, __ = TestIssue3Model.objects.get_or_create(username='aaa')
         obj_copy = TestIssue3Model.objects.get(pk=obj.pk)
         Form = modelform_factory(TestIssue3Model, ConcurrentForm)
-        form = Form(model_to_dict(obj), instance=obj)
+        data = {'username': 'aaa',
+                'last_name': None,
+                'date_field': None,
+                'char_field': None,
+                'version': u'abc',
+                'id': 1,
+                'revision': Signer().sign(obj.revision)}
+        form = Form(data, instance=obj)
         obj_copy.save() # save
         self.assertFalse(form.is_valid())
         self.assertIn('Record Modified', form.non_field_errors())
@@ -30,7 +37,14 @@ class ConcurrentFormTest(TestCase):
     def test_is_valid(self):
         obj, __ = TestIssue3Model.objects.get_or_create(username='aaa')
         Form = modelform_factory(TestIssue3Model, ConcurrentForm)
-        form = Form(model_to_dict(obj), instance=obj)
+        data = {'username': 'aaa',
+                'last_name': None,
+                'date_field': None,
+                'char_field': None,
+                'version': u'abc',
+                'id': 1,
+                'revision': Signer().sign(obj.revision)}
+        form = Form(data, instance=obj)
         obj.save() # save again simulate concurrent editing
         self.assertRaises(ValueError, form.save)
 
