@@ -1,6 +1,7 @@
 Release 0.4.0 (under development)
 =================================
 
+* signing of version number to avoid tampering (:ref:`concurrentform`)
 * added :ref:`ConcurrencyTestMixin` to help test on concurrency managed models
 * changed way to add concurrency to exisiting models (:ref:`apply_concurrency_check`)
 * fixed #4 (thanks FrankBie)
